--- a/kolokwiumAPBD/kolokwiumAPBD.csproj
+++ b/kolokwiumAPBD/kolokwiumAPBD.csproj
@@ -7,10 +7,18 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="DTO\" />
-    <Folder Include="Models\" />
     <Folder Include="DAL\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 
